--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,15 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": "hello_extensions.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://www.target.com/p/*",
+        "https://www.amazon.com/gp/cart*",
+        "https://developer.chrome.com/docs/webstore/*"
+      ]
+    }
+  ]
 }
