--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,14 @@
   "manifest_version": 3,
   "permissions": [
     "tabs",
-    "storage"
+    "storage" ,
+    "activeTab" ,
+    "scripting"
   ],
+  "background":{
+    "service_worker": "background.js",
+    "type": "module"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
