--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
-  "name": "Spending Checkpoint",
-  "description": "Chrome extension that pops up before purchasing something",
-  "version": "1.0",
   "manifest_version": 3,
-  "permissions": [
-    "tabs",
-    "storage"
-  ],
+  "name": "Spending Checkpoint",
+  "version": "1.0",
+  "permissions": ["scripting", "activeTab"],
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup.html" ,
     "default_icon": {
       "16": "images/penny-logo-16.png",
       "32": "images/penny-logo-32.png",
